--- a/index.html
+++ b/index.html
@@ -1,258 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FinanzasClaras</title>
-
-    <!-- Meta tags para redes sociales -->
-    <meta property="og:image" content="https://4tsix0yujj.ufs.sh/f/2vMRHqOYUHc0K5prXUEjR7oilQcqGuVyEA8Sm1pf4v95nLIB" />
-    <meta property="og:image:alt" content="Imagen del proyecto" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://4tsix0yujj.ufs.sh/f/2vMRHqOYUHc0K5prXUEjR7oilQcqGuVyEA8Sm1pf4v95nLIB" />
-
-    <!-- PWA -->
-    <link rel="manifest" href="manifest.json" />
-    <meta name="theme-color" content="#000000" />
-
-    <!-- TailwindCSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-
-    <!-- React & Babel -->
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-
-    <script type="text/babel">
-      const { useState, useEffect, useRef, useCallback, useMemo, createContext, useContext, StrictMode } = React;
-      const { createRoot } = ReactDOM;
-
-      const FinanceHeader = ({ title = 'Mi Billetera', balance = 0, onAddTransaction = () => {} }) => (
-        <header className="bg-white p-4 shadow-sm rounded-b-2xl flex justify-between items-center">
-          <div className="flex flex-col">
-            <h1 className="text-2xl font-semibold text-gray-800">{title}</h1>
-            <p className="text-sm text-gray-500">Balance Total: <span className="font-medium text-gray-700">Bs. {balance.toFixed(2)}</span></p>
-          </div>
-          <button onClick={onAddTransaction} className="bg-black text-white px-4 py-2 rounded-lg shadow-md hover:bg-gray-800 transition-colors duration-300">
-            + Transacción
-          </button>
-        </header>
-      );
-
-      const FinanceTransactionCard = ({ type = 'ingreso', description = '', amount = 0, date = '', onEdit = () => {}, onDelete = () => {} }) => {
-        const isIncome = type === 'ingreso';
-        const amountColorClass = isIncome ? 'text-green-600' : 'text-red-600';
-        const sign = isIncome ? '+' : '-';
-
-        return (
-          <div className="bg-white p-4 rounded-xl shadow-sm flex justify-between items-center mb-3 transition-all duration-300 hover:shadow-md">
-            <div className="flex flex-col">
-              <span className="font-medium text-gray-800">{description}</span>
-              <span className="text-sm text-gray-500">{date}</span>
-            </div>
-            <div className="flex items-center space-x-4">
-              <span className={`font-semibold text-lg ${amountColorClass}`}>{sign}Bs. {amount.toFixed(2)}</span>
-              <div className="flex space-x-2">
-                <button onClick={onEdit} className="text-gray-500 hover:text-blue-600 transition-colors duration-200" aria-label="Editar transacción">
-                  <svg xmlns="http://www.w3.org/2000/svg" className="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                    <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.38-2.827-2.828z" />
-                  </svg>
-                </button>
-                <button onClick={onDelete} className="text-gray-500 hover:text-red-600 transition-colors duration-200" aria-label="Eliminar transacción">
-                  <svg xmlns="http://www.w3.org/2000/svg" className="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                    <path fillRule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm6 0a1 1 0 11-2 0v6a1 1 0 112 0V8z" clipRule="evenodd" />
-                  </svg>
-                </button>
-              </div>
-            </div>
-          </div>
-        );
-      };
-
-      const FinanceTransactionList = ({ transactions = [], onEditTransaction = () => {}, onDeleteTransaction = () => {} }) => (
-        <div className="p-4">
-          <h2 className="text-xl font-semibold text-gray-800 mb-4">Transacciones Recientes</h2>
-          {transactions.length === 0 ? (
-            <p className="text-gray-500 text-center py-8">No hay transacciones registradas aún.</p>
-          ) : (
-            <div className="space-y-3">
-              {transactions.map(transaction => (
-                <FinanceTransactionCard
-                  key={transaction.id}
-                  type={transaction.type}
-                  description={transaction.description}
-                  amount={transaction.amount}
-                  date={transaction.date}
-                  onEdit={() => onEditTransaction(transaction.id)}
-                  onDelete={() => onDeleteTransaction(transaction.id)}
-                />
-              ))}
-            </div>
-          )}
-        </div>
-      );
-
-      const FinanceAddTransactionModal = ({ isOpen = true, onClose = () => {}, onSave = () => {}, transactionToEdit = null }) => {
-        const [type, setType] = useState(transactionToEdit ? transactionToEdit.type : 'ingreso');
-        const [description, setDescription] = useState(transactionToEdit ? transactionToEdit.description : '');
-        const [amount, setAmount] = useState(transactionToEdit ? transactionToEdit.amount : '');
-        const [date, setDate] = useState(transactionToEdit ? transactionToEdit.date : new Date().toISOString().split('T')[0]);
-
-        const handleSubmit = (e) => {
-          e.preventDefault();
-          if (!description || !amount || !date) {
-            alert('Por favor, completa todos los campos.');
-            return;
-          }
-          const newTransaction = {
-            id: transactionToEdit ? transactionToEdit.id : Date.now(),
-            type,
-            description,
-            amount: parseFloat(amount),
-            date,
-          };
-          onSave(newTransaction);
-          onClose();
-        };
-
-        if (!isOpen) return null;
-
-        return (
-          <div className="fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center p-4 z-50">
-            <div className="bg-white p-6 rounded-2xl shadow-2xl w-full max-w-md">
-              <h2 className="text-2xl font-bold text-gray-800 mb-6 text-center">
-                {transactionToEdit ? 'Editar Transacción' : 'Nueva Transacción'}
-              </h2>
-              <form onSubmit={handleSubmit} className="space-y-4">
-                <div>
-                  <label htmlFor="type" className="block text-sm font-medium text-gray-700 mb-1">Tipo</label>
-                  <select id="type" value={type} onChange={(e) => setType(e.target.value)} className="w-full px-4 py-2 bg-gray-50 border border-gray-300 rounded-lg">
-                    <option value="ingreso">Ingreso</option>
-                    <option value="egreso">Egreso</option>
-                  </select>
-                </div>
-                <div>
-                  <label htmlFor="description" className="block text-sm font-medium text-gray-700 mb-1">Descripción</label>
-                  <input type="text" id="description" value={description} onChange={(e) => setDescription(e.target.value)} placeholder="Ej. Salario, Alquiler" className="w-full px-4 py-2 bg-gray-50 border border-gray-300 rounded-lg" />
-                </div>
-                <div>
-                  <label htmlFor="amount" className="block text-sm font-medium text-gray-700 mb-1">Monto</label>
-                  <input type="number" id="amount" value={amount} onChange={(e) => setAmount(e.target.value)} step="0.01" className="w-full px-4 py-2 bg-gray-50 border border-gray-300 rounded-lg" />
-                </div>
-                <div>
-                  <label htmlFor="date" className="block text-sm font-medium text-gray-700 mb-1">Fecha</label>
-                  <input type="date" id="date" value={date} onChange={(e) => setDate(e.target.value)} className="w-full px-4 py-2 bg-gray-50 border border-gray-300 rounded-lg" />
-                </div>
-                <div className="flex justify-end space-x-3 mt-6">
-                  <button type="button" onClick={onClose} className="px-5 py-2 border border-gray-300 rounded-lg text-gray-700 hover:bg-gray-100">Cancelar</button>
-                  <button type="submit" className="px-5 py-2 bg-black text-white rounded-lg shadow-md hover:bg-gray-800">Guardar</button>
-                </div>
-              </form>
-            </div>
-          </div>
-        );
-      };
-
-      const FinanceSummaryCard = ({ title = 'Total', value = 0, type = 'total' }) => {
-        let valueColorClass = 'text-gray-800';
-        if (type === 'ingresos') valueColorClass = 'text-green-600';
-        if (type === 'egresos') valueColorClass = 'text-red-600';
-
-        return (
-          <div className="bg-white p-5 rounded-2xl shadow-sm flex flex-col items-center justify-center hover:shadow-md transition-all">
-            <h3 className="text-lg font-medium text-gray-600 mb-2">{title}</h3>
-            <span className={`text-3xl font-bold ${valueColorClass}`}>Bs. {value.toFixed(2)}</span>
-          </div>
-        );
-      };
-
-      const FinanceSummarySection = ({ totalBalance = 0, totalIncome = 0, totalExpense = 0 }) => (
-        <div className="p-4 grid grid-cols-1 md:grid-cols-3 gap-4">
-          <FinanceSummaryCard title="Balance Total" value={totalBalance} type="total" />
-          <FinanceSummaryCard title="Ingresos" value={totalIncome} type="ingresos" />
-          <FinanceSummaryCard title="Egresos" value={totalExpense} type="egresos" />
-        </div>
-      );
-
-      const App = () => {
-        const [transactions, setTransactions] = useState([]);
-        const [isModalOpen, setIsModalOpen] = useState(false);
-        const [transactionToEdit, setTransactionToEdit] = useState(null);
-
-        useEffect(() => {
-          const storedTransactions = JSON.parse(localStorage.getItem('financeTransactions')) || [];
-          setTransactions(storedTransactions);
-        }, []);
-
-        useEffect(() => {
-          localStorage.setItem('financeTransactions', JSON.stringify(transactions));
-        }, [transactions]);
-
-        const handleSaveTransaction = (newTransaction) => {
-          if (transactionToEdit) {
-            setTransactions(transactions.map(t => t.id === newTransaction.id ? newTransaction : t));
-          } else {
-            setTransactions([...transactions, newTransaction]);
-          }
-          setTransactionToEdit(null);
-        };
-
-        const handleDeleteTransaction = (id) => setTransactions(transactions.filter(t => t.id !== id));
-        const handleEditTransaction = (id) => {
-          const transaction = transactions.find(t => t.id === id);
-          setTransactionToEdit(transaction);
-          setIsModalOpen(true);
-        };
-
-        const totalBalance = transactions.reduce((acc, t) => acc + (t.type === 'ingreso' ? t.amount : -t.amount), 0);
-        const totalIncome = transactions.filter(t => t.type === 'ingreso').reduce((acc, t) => acc + t.amount, 0);
-        const totalExpense = transactions.filter(t => t.type === 'egreso').reduce((acc, t) => acc + t.amount, 0);
-
-        return (
-          <div className="min-h-screen bg-gray-100 font-sans antialiased">
-            <FinanceHeader
-              balance={totalBalance}
-              onAddTransaction={() => {
-                setTransactionToEdit(null);
-                setIsModalOpen(true);
-              }}
-            />
-            <main className="container mx-auto py-6 px-4">
-              <FinanceSummarySection
-                totalBalance={totalBalance}
-                totalIncome={totalIncome}
-                totalExpense={totalExpense}
-              />
-              <FinanceTransactionList
-                transactions={transactions}
-                onEditTransaction={handleEditTransaction}
-                onDeleteTransaction={handleDeleteTransaction}
-              />
-            </main>
-            <FinanceAddTransactionModal
-              isOpen={isModalOpen}
-              onClose={() => setIsModalOpen(false)}
-              onSave={handleSaveTransaction}
-              transactionToEdit={transactionToEdit}
-            />
-          </div>
-        );
-      };
-
-      const root = createRoot(document.getElementById("root"));
-      root.render(<StrictMode><App /></StrictMode>);
-    </script>
-
-    <!-- Registrar Service Worker -->
-    <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('sw.js')
-          .then(() => console.log('Service Worker registrado'))
-          .catch(err => console.error('Error al registrar SW:', err));
-      }
-    </script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>Finanzas Claras</title></head><body><h1>Bienvenido</h1><script src='app.js'></script></body></html>
